Add (exclusive) advisory file locks as well as some utilities to manage inter-process notifications based on `SIGUSR1`.

--- a/common/BUILD
+++ b/common/BUILD
@@ -210,11 +210,15 @@ cc_library(
     srcs = ["testing.cc"],
     hdrs = ["testing.h"],
     deps = [
+        ":env",
+        "//io:fd",
         "@com_google_absl//absl/debugging:failure_signal_handler",
+        "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:initialize",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:status_matchers",
         "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest",
     ],
     alwayslink = True,
