--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,8 @@
     "io_context": "cpp",
     "netfwd": "cpp",
     "timer": "cpp",
-    "codecvt": "cpp"
+    "codecvt": "cpp",
+    "complex": "cpp"
   },
   "C_Cpp.default.cppStandard": "c++17",
   "C_Cpp.default.intelliSenseMode": "linux-clang-x64",
