--- a/json/BUILD
+++ b/json/BUILD
@@ -58,6 +58,7 @@ cc_test(
         "@com_google_absl//absl/hash",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:status_matchers",
+        "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
     ],
 )
