Initialize the thread pool of the default scheduler at startup with a dedicated module.

--- a/common/BUILD
+++ b/common/BUILD
@@ -769,10 +769,13 @@ cc_library(
     srcs = ["default_scheduler.cc"],
     hdrs = ["default_scheduler.h"],
     deps = [
+        ":no_destructor",
         ":scheduler",
         ":singleton",
+        "//server:base_module",
+        "//server:init_tsdb2",
         "@com_google_absl//absl/flags:flag",
-        "@com_google_absl//absl/functional:any_invocable",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
     ],
 )
