Configure the source map path for LLDB.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,12 @@
       "program": "${fileWorkspaceFolder}/bazel-bin/${relativeFileDirname}/${fileBasenameNoExtension}",
       "args": [],
       "cwd": "${fileWorkspaceFolder}",
+      "sourceMap": [
+        [
+          ".",
+          "${fileWorkspaceFolder}"
+        ]
+      ]
     },
     {
       "name": "(gdb) Launch",
