Add temp code that always responds to all HTTP requests with a sample HTML page.
Fix the temp code.

Chunk headers and data.

Return `404 Not Found` for anything else than the root path.

Refactoring.

Don't compress headers if the Huffman encoding would result in a longer string.

Refactoring.

Add some test coverage for `ChannelListener`.

Fix tests.

Add `/envz`.

--- a/common/BUILD
+++ b/common/BUILD
@@ -34,6 +34,7 @@ cc_library(
     deps = [
         "@com_google_absl//absl/debugging:stacktrace",
         "@com_google_absl//absl/debugging:symbolize",
+        "@com_google_absl//absl/log",
         "@com_google_absl//absl/strings",
     ],
 )
