--- a/server/BUILD
+++ b/server/BUILD
@@ -65,6 +65,43 @@ cc_test(
 )
 
 cc_library(
+    name = "statusz",
+    srcs = ["statusz.cc"],
+    deps = [
+        ":base_module",
+        ":init_tsdb2",
+        "//common:no_destructor",
+        "//common:utilities",
+        "//http",
+        "//http:default_server",
+        "//http:handlers",
+        "//io:buffer",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+    ],
+    alwayslink = True,
+)
+
+cc_library(
+    name = "envz",
+    srcs = ["envz.cc"],
+    deps = [
+        ":base_module",
+        ":init_tsdb2",
+        "//common:env",
+        "//common:no_destructor",
+        "//common:utilities",
+        "//http",
+        "//http:default_server",
+        "//http:handlers",
+        "//io:buffer",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+    ],
+    alwayslink = True,
+)
+
+cc_library(
     name = "testing",
     testonly = True,
     hdrs = ["testing.h"],
@@ -83,7 +120,9 @@ cc_binary(
         ":init_tsdb2",
     ],
     deps = [
+        ":envz",  # build_cleaner: keep
         ":init_tsdb2",
-        "//http:server",
+        ":statusz",  # build_cleaner: keep
+        "//http:default_server",
     ],
 )
