Refactor the HTTP/2 server.
Refactoring.

Add some test coverage for `WriteQueue::AppendFieldsFrames`.

Reimplement some of the processing.

Add more processing.

Restore the full HTTP/2 implementation.

Add some logging.

Add `/healthz`.

Bugfix: processing for HEADERS+CONTINUATION must continue explicitly.

Improve doc snippets.

Don't accept new streams if we're going away.

Fix unit tests.

Test custom settings.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
       "type": "lldb-dap",
       "request": "launch",
       "program": "${fileWorkspaceFolder}/bazel-bin/${relativeFileDirname}/${fileBasenameNoExtension}",
-      "args": [],
+      "args": [
+        "--port=8080",
+        "--http2_io_timeout=1h",
+      ],
       "cwd": "${fileWorkspaceFolder}",
       "sourceMap": [
         [
