Refactor the module initialization system.

--- a/http/BUILD
+++ b/http/BUILD
@@ -7,10 +7,8 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//common:flat_map",
-        "//common:no_destructor",
         "//common:utilities",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/status",
@@ -295,12 +293,10 @@ cc_library(
     deps = [
         ":handlers",
         ":server",
-        "//common:no_destructor",
         "//common:trie_map",
         "//common:utilities",
         "//net:base_sockets",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/log",
