--- a/net/BUILD
+++ b/net/BUILD
@@ -6,13 +6,11 @@ cc_library(
     hdrs = ["epoll_server.h"],
     visibility = ["//http:__subpackages__"],
     deps = [
-        "//common:no_destructor",
         "//common:ref_count",
         "//common:reffed_ptr",
         "//common:utilities",
         "//io:fd",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/flags:flag",
@@ -34,13 +32,11 @@ cc_library(
     deps = [
         ":epoll_server",
         "//common:default_scheduler",
-        "//common:no_destructor",
         "//common:scheduler",
         "//common:utilities",
         "//io:buffer",
         "//io:fd",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/functional:any_invocable",
         "@com_google_absl//absl/log:check",
@@ -98,8 +94,7 @@ cc_library(
         "//common:singleton",
         "//common:utilities",
         "//io:fd",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status",
@@ -120,8 +115,7 @@ cc_library(
         "//common:scoped_override",
         "//common:singleton",
         "//common:utilities",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
@@ -138,13 +132,11 @@ cc_library(
         ":epoll_server",
         ":ssl",
         "//common:default_scheduler",
-        "//common:no_destructor",
         "//common:reffed_ptr",
         "//common:scheduler",
         "//common:simple_condition",
         "//common:utilities",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/flags:flag",
