--- a/tsz/internal/BUILD
+++ b/tsz/internal/BUILD
@@ -270,11 +270,9 @@ cc_library(
         ":shard",
         "//common:default_scheduler",
         "//common:lock_free_hash_map",
-        "//common:no_destructor",
         "//common:singleton",
         "//common:utilities",
-        "//server:base_module",
-        "//server:init_tsdb2",
+        "//server:module",
         "//tsz:types",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
