Use STL functions to parse numbers in JSON.

--- a/json/BUILD
+++ b/json/BUILD
@@ -7,6 +7,8 @@ cc_library(
     deps = [
         "//common:flat_map",
         "//common:flat_set",
+        "//common:no_destructor",
+        "//common:re",
         "//common:reffed_ptr",
         "//common:to_array",
         "//common:trie_map",
