--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -23,3 +23,9 @@ bazel_dep(
     version = "20240722.0.bcr.2",
     repo_name = "com_google_absl",
 )
+
+bazel_dep(
+    name = "protobuf",
+    version = "28.3",
+    repo_name = "com_google_protobuf",
+)
