--- a/io/BUILD
+++ b/io/BUILD
@@ -6,6 +6,7 @@ cc_library(
     deps = [
         "//common:utilities",
         "@com_google_absl//absl/log:check",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
