Add skipping tests.

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -21,6 +21,7 @@ cc_test(
     deps = [
         ":wire",
         "//common:testing",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:status_matchers",
         "@com_google_googletest//:gtest_main",
     ],
