Proto dependency manager.

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -46,6 +46,31 @@ cc_library(
 )
 
 cc_library(
+    name = "dependencies",
+    srcs = ["dependencies.cc"],
+    hdrs = ["dependencies.h"],
+    deps = [
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/container:inlined_vector",
+        "@com_google_absl//absl/log:check",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:span",
+    ],
+)
+
+cc_test(
+    name = "dependencies_test",
+    srcs = ["dependencies_test.cc"],
+    deps = [
+        ":dependencies",
+        "//common:testing",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
     name = "plugin",
     hdrs = ["plugin.h"],
     deps = [
